--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -12,7 +12,7 @@
             <Grid.Effect>
                 <DropShadowEffect Direction="270" BlurRadius="5" ShadowDepth="2" Opacity="0.5"/>
             </Grid.Effect>
-            <Label Content="Вещи для дома" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" FontSize="15pt"/>
+            <Label Height="50" VerticalAlignment="Top" Content="Вещи для дома" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" FontSize="15pt" />
             <Image Width="30" Height="30" Margin="10" VerticalAlignment="Top" HorizontalAlignment="Left" Source="/Images/ic_shop.png" MouseDown="OpenIndex"/>
         </Grid>
     </Grid>
